...
    android:background="@drawable/button_background"
    android:elevation="1dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_notification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

...
