...
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <!--
            Event name
        -->
        <TextView
            android:id="@+id/event_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Name here"



...
